# titus0405

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
Dt/: Kriteria_Rujukan_KMK 1186 dan 1936.xlsx
data/: chat_events.jsonl
src/bot_tele/: __init__.py  __main__.py  bot.py  client.py  config.py  conversation.py  documents.py  errors.py  events.py  knowledge.py  messages.py  references.py  storage.py
tests/: test_bot.py  test_client.py  test_document.py  test_documents.py  test_events.py  test_messages.py  test_rujukan.py  test_store.py
