[project]
name = "bot-tele"
version = "0.1.0"
description = "Telegram bot backed by a configurable AI model, with document reading"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.45.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "ruff>=0.8",
    "pytest>=8",
    "pytest-cov>=5",
    "fpdf2>=2.8.7",
]

# ─────────────────────────────────────────────────────────────────
# basedpyright - typeCheckingMode = "all" sets every report flag to error
# ─────────────────────────────────────────────────────────────────
[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

# ─────────────────────────────────────────────────────────────────
# ruff - select = ["ALL"]
# ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (formatter conflict)
    "ISC001",   # implicit string concat (formatter conflict)
    "D203",     # docstring convention
    "D213",     # docstring convention
    "CPY001",   # copyright notice
    "FBT001",   # boolean positional arg
    "FBT002",   # boolean positional default
    "TD002",    # TODO author
    "TD003",    # TODO link
    "FIX002",   # TODO allowed
    "TRY003",   # typed exceptions already carry structured messages
    "EM101",    # same reason as TRY003
    "EM102",    # same reason as TRY003
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D", "S106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_tele"]
